Feat: Add linked-tab support, disable caching, and update UI with version badge

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <h1>ABC+ <span class="title-suffix">Converter</span></h1>
+        <h1>ABC+ <span class="title-suffix">Converter</span> <span class="version-badge">v{{ version }}</span></h1>
         <div class="status-bar">
             <div id="status-dot" class="status-dot"></div>
             <span id="status-text">Ready</span>
