--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- OpenSheetMusicDisplay -->
-    <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/opensheetmusicdisplay/1.8.8/opensheetmusicdisplay.min.js"></script>
+    <script src="{{ url_for('static', filename='opensheetmusicdisplay.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='abcjs-basic-min.js') }}"></script>
 </head>
 
 <body>
